Create Image in GridView using an ItemTemplate in XAML
- Put an Image inside the GridView.ItemTemplate
- Source bound to the item
- Feed URLs to the Works collection instead of Images
- Image seems to be able to load URLs from Source

--- a/pixiv-sekai/RankingPage.xaml
+++ b/pixiv-sekai/RankingPage.xaml
@@ -11,6 +11,14 @@
     </Page.DataContext>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <GridView x:Name="gridView" Margin="10" ItemsSource="{Binding Works}"/>
+        <GridView x:Name="gridView" Margin="10" ItemsSource="{Binding Works}">
+            <GridView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="5">
+                        <Image Source="{Binding}" Stretch="UniformToFill" Width="150" Height="150"/>
+                    </Grid>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
     </Grid>
 </Page>
