RankingPage: make columns fit window
Auto-resizes columns to make them roughly size 150 and fill the entire
width of the window (so there's no awkward gap on the right).

- Use a SizeChanged event handler that calculates the correct width for
everything
- Try to divide available space up into columns of width 150
- Round this down to get the number of columns
- Fix column size as availableWidth/numberOfColumns
- Set width through the GridView's ItemsPanelRoot's ItemWidth property
- Adjust padding/margins
- Centre set of columns in GridView
- Explicitly declare the ItemsPanel using an ItemsWrapGrid
- Set HorizontalAlignment on it
- Make everything still show in XAML designer
- ItemTemplate needs to have a width/height for it to show
- Bind ItemTemplate's Grid Width/Height to the ItemWidth/ItemHeight
- Set ItemWidth/ItemHeight to 150 for now
- Make the background of the ItemTemplate be a filled rectangle, rather
than on the background of the Grid
- This makes the padding work properly

--- a/pixiv-sekai/RankingPage.xaml
+++ b/pixiv-sekai/RankingPage.xaml
@@ -33,11 +33,17 @@
             </CommandBar>
         </RelativePanel>
 
-        <GridView x:Name="gridView" Margin="10" ItemsSource="{Binding Works}" Grid.Row="1">
+        <GridView x:Name="gridView" Margin="0,15,0,0" ItemsSource="{Binding Works}" Grid.Row="1" SizeChanged="GridViewSizeChanged" Padding="15,0,15,0">
+            <GridView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <ItemsWrapGrid Orientation="Horizontal" HorizontalAlignment="Center" ItemWidth="150" ItemHeight="150"/>
+                </ItemsPanelTemplate>
+            </GridView.ItemsPanel>
             <GridView.ItemTemplate>
                 <DataTemplate>
-                    <Grid Margin="5">
-                        <Image Source="{Binding}" Stretch="UniformToFill" Width="150" Height="150"/>
+                    <Grid Padding="5" Width="{Binding ItemsPanelRoot.ItemWidth, ElementName=gridView}" Height="{Binding ItemsPanelRoot.ItemHeight, ElementName=gridView}">
+                        <Rectangle Fill="{ThemeResource ListViewItemOverlayBackgroundThemeBrush}" />
+                        <Image Source="{Binding}" Stretch="UniformToFill"/>
                     </Grid>
                 </DataTemplate>
             </GridView.ItemTemplate>
