--- a/pixiv-sekai/LoginPage.xaml
+++ b/pixiv-sekai/LoginPage.xaml
@@ -11,8 +11,20 @@
     </Page.DataContext>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button x:Name="button" Content="Login" HorizontalAlignment="Left" Margin="99,213,0,0" VerticalAlignment="Top" Command="{Binding LoginCommand}"/>
-        <TextBox x:Name="usernameTextBox" HorizontalAlignment="Left" Margin="99,59,0,0" TextWrapping="Wrap" VerticalAlignment="Top" PlaceholderText="Username" Text="{Binding Username, Mode=TwoWay}"/>
-        <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Margin="223,59,0,0" VerticalAlignment="Top" PlaceholderText="Password" PasswordChanged="PasswordChanged"/>
+        <Grid Height="450">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="200"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Image x:Name="image" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Top" Width="200" Height="200" Source="Assets/LockScreenLogo.png"/>
+            <TextBlock x:Name="textBlock" HorizontalAlignment="Center" Margin="0" TextWrapping="Wrap" Text="pixiv-sekai" VerticalAlignment="Top" Grid.Row="1" FontStyle="Italic" FontSize="36" Foreground="#FF5C5C5C"/>
+            <StackPanel Grid.Row="2" VerticalAlignment="Bottom">
+                <TextBox x:Name="usernameTextBox" HorizontalAlignment="Center" Margin="0" TextWrapping="Wrap" VerticalAlignment="Top" PlaceholderText="pixiv ID" Text="{Binding Username, Mode=TwoWay}" Width="275"/>
+                <PasswordBox x:Name="passwordBox" HorizontalAlignment="Center" Margin="0,5,0,0" VerticalAlignment="Top" PlaceholderText="Password" PasswordChanged="PasswordChanged" Width="275"/>
+                <Button x:Name="button" Content="Login to pixiv" HorizontalAlignment="Center" Margin="0,12,0,0" VerticalAlignment="Top" Command="{Binding LoginCommand}" Width="275"/>
+            </StackPanel>
+        </Grid>
+
     </Grid>
 </Page>
