Allow logout now
Clears saved password and returns to login screen

- Currently does not attempt to actually logout of pixiv <- maybe a todo
for later

--- a/pixiv-sekai/RankingPage.xaml
+++ b/pixiv-sekai/RankingPage.xaml
@@ -28,7 +28,7 @@
             <AutoSuggestBox x:Name="searchBox" Margin="0,8,12,0" Width="270" PlaceholderText="Search" QueryIcon="Find" RelativePanel.LeftOf="commandBar" />
             <CommandBar x:Name="commandBar" RelativePanel.AlignRightWithPanel="True" Margin="0,0,12,0" Background="{x:Null}">
                 <CommandBar.SecondaryCommands>
-                    <AppBarButton Label="Sign out"/>
+                    <AppBarButton Label="Logout" Command="{Binding LogoutCommand}"/>
                 </CommandBar.SecondaryCommands>
             </CommandBar>
         </RelativePanel>
